--- a/src/views/screens/guided_search/date_questionnaire.njk
+++ b/src/views/screens/guided_search/date_questionnaire.njk
@@ -11,7 +11,7 @@
 
 {% block content %}
   {% include "partials/results_count/template.njk" %}
-  <div class="govuk-grid-row">
+  <div class="govuk-grid-row date-search-form">
     <form method="POST" id="{{formId}}" action="{{guidedDateSearchPath}}" data-do-browser-storage>
       <div class="govuk-grid-column-full govuk-!-padding-top-6">
         <h1 class="govuk-heading-m">
