BUG 384419 - updated ai_session cookie expiry

--- a/src/views/screens/home/cookie_policy.njk
+++ b/src/views/screens/home/cookie_policy.njk
@@ -64,7 +64,7 @@
           <tr>
             <td>ai_session</td>
             <td>Unique user identifier cookie for counting the number of users accessing an application over time.</td>
-            <td>1 year</td>
+            <td>30 minutes</td>
           </tr>
           <tr>
             <td>ncea-search-data</td>
