Update the service name on FE objects

--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -84,11 +84,11 @@
 
 {% block bodyStart %}
   {{ govukCookieBanner({
-    ariaLabel: "Cookies on "+serviceName,
+    ariaLabel: "Cookies on the find natural capital data service",
     attributes: { id: "cookie_banner" },
     messages: [
       {
-        headingText: "Cookies on "+serviceName,
+        headingText: "Cookies on the find natural capital data service",
         html: cookieHtml,
         hidden: true,
         actions: [
