--- a/src/views/screens/home/accessibility.njk
+++ b/src/views/screens/home/accessibility.njk
@@ -25,7 +25,7 @@
     <article class="govuk-grid-column-full ncea-static-page">
       <h1 class="govuk-heading-m ncea-static-page__heading-m">Accessibility statement</h1>
       <section class="ncea-static-page__content">
-        <p class="ncea-static-page__content-item">This accessibility statement applies to the Natural Capital Search Service.</p>
+        <p class="ncea-static-page__content-item">This accessibility statement applies to the find natural capital data service.</p>
         <p class="ncea-static-page__content-item">This service is run by the NCEA programme, on behalf of the Department for Environment, Food and Rural Affairs (Defra).</p>
         <p class="ncea-static-page__content-item">We want as many people as possible to be able to use this website. It has been designed using GDS components and patterns, which are accessible. We've also made the website text as simple as possible to understand.</p>
       </section>
