--- a/src/views/screens/home/template.njk
+++ b/src/views/screens/home/template.njk
@@ -7,7 +7,7 @@
   <header class="full-width-banner" role="banner">
     <div class="banner-container">
       <img alt="Department for Environment Food &amp; Rural Affairs Logo" src="{{ assetPath }}/images/NCEA-logo-landscape.png" class="banner-container__ncea-logo">
-      <h1 class="govuk-heading-xl banner-container__heading-xl">Natural Capital Search Service</h1>
+      <h1 class="govuk-heading-xl banner-container__heading-xl">Find Natural Capital data</h1>
       <span class="govuk-caption-l banner-container__caption-l">Use this service to search for data and information about the environment and ecosystems in  the UK.</span>
       <span class="govuk-caption-l banner-container__caption-l">This service supports the use of natural capital approaches to gathering evidence and making decisions.</span>
     </div>
