--- a/src/views/screens/home/terms_conditions.njk
+++ b/src/views/screens/home/terms_conditions.njk
@@ -29,15 +29,15 @@
       </section>
       <h2 class="govuk-heading-s ncea-static-page__heading-s govuk-!-margin-top-4">Who we are</h2>
       <section class="ncea-static-page__content">
-        <p class="ncea-static-page__content-item">Natural Capital Search Service is managed by the NCEA programme on behalf of Defra.<br/>Defra will be referred to as 'we' from now on.</p>
+        <p class="ncea-static-page__content-item">Find natural capital data is managed by the NCEA programme on behalf of Defra.<br/>Defra will be referred to as ‘we’ from now on. </p>
         <p class="ncea-static-page__content-item">This service is currently in private beta. The terms and conditions will be updated once the service is in public beta.</p>
       </section>
-      <h2 class="govuk-heading-s ncea-static-page__heading-s govuk-!-margin-top-4">Using Natural Capital Search Service</h2>
+      <h2 class="govuk-heading-s ncea-static-page__heading-s govuk-!-margin-top-4">Using the find natural capital data service</h2>
       <section class="ncea-static-page__content">
         <p class="ncea-static-page__content-item">You agree to use this site only for lawful purposes. You must also use it in a way that does not infringe the rights of, or restrict or inhibit the use and enjoyment of, this site by anyone else.</p>
         <p class="ncea-static-page__content-item">We update this site all the time. We can change or remove content at any time without notice.</p>
       </section>
-      <h2 class="govuk-heading-s ncea-static-page__heading-s govuk-!-margin-top-4">Linking from Natural Capital Search Service</h2>
+      <h2 class="govuk-heading-s ncea-static-page__heading-s govuk-!-margin-top-4">Linking from the find natural capital data service</h2>
       <section class="ncea-static-page__content">
         <p class="ncea-static-page__content-item">Our service may link to websites that are managed by other government departments and agencies, service providers or other organisations. We do not have any control over the content on these websites.</p>
         <p class="ncea-static-page__content-item">We're not responsible for:</p>
