391187 - Fixing the map improvements

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -8131,9 +8131,8 @@
   }
 }
 .govuk-checkboxes__input {
-  width: 26px;
-  height: 26px;
-  margin-left: 2px;
+  width: 23px;
+  height: 23px;
   margin-top: 5px;
 }
 
@@ -8146,18 +8145,19 @@
 .defra-checkboxes__label {
   display: flex;
   align-items: center;
+  padding: 4px 10px;
 }
 .defra-checkboxes__label::before {
   top: 5px;
-  width: 28px;
-  height: 28px;
+  width: 24px;
+  height: 24px;
 }
 .defra-checkboxes__label::after {
-  top: 12px;
-  left: 7px;
-  width: 19px;
-  border-width: 0 0 4px 4px;
-  height: 10px;
+  top: 11px;
+  left: 6px;
+  width: 17px;
+  border-width: 0 0 3px 3px;
+  height: 8px;
 }
 
 .defra-filter-section select {
@@ -8270,6 +8270,30 @@
 }
 .defra-reset-study-period--link:focus {
   color: #003078 !important;
+}
+
+#defra-bounding-box-info {
+  font-family: "GDS Transport", arial, sans-serif;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 20px;
+  color: #d4351c;
+  display: none;
+}
+
+.map-results-block {
+  border-left: 5px solid #d4351c;
+  padding-left: 10px;
+}
+.map-results-unavailable {
+  font-family: "GDS Transport", arial, sans-serif;
+  font-size: 1.1875rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 25px;
+  color: #d4351c;
+  display: none;
 }
 
 .details-title {
