--- a/src/assets/sass/templates/_results.scss
+++ b/src/assets/sass/templates/_results.scss
@@ -325,9 +325,8 @@
 }
 
 .govuk-checkboxes__input {
-  width: 26px;
-  height: 26px;
-  margin-left: 2px;
+  width: 23px;
+  height: 23px;
   margin-top: 5px;
 }
 
@@ -336,19 +335,20 @@
   &__label {
     display: flex;
     align-items: center;
+    padding: 4px 10px;
 
     &::before {
       top: 5px;
-      width: 28px;
-      height: 28px;
+      width: 24px;
+      height: 24px;
     }
 
     &::after {
-      top: 12px;
-      left: 7px;
-      width: 19px;
-      border-width: 0 0 4px 4px;
-      height: 10px;
+      top: 11px;
+      left: 6px;
+      width: 17px;
+      border-width: 0 0 3px 3px;
+      height: 8px;
     }
   }
 }
@@ -471,5 +471,26 @@
 
   &:focus {
     color: $govuk-link-hover-colour !important;
+  }
+}
+
+#defra-bounding {
+  &-box-info {
+    @include font-style-stack(16px, 20px, 700, normal, true);
+    color: $govuk-error-colour;
+    display: none;
+  }
+}
+
+.map-results {
+  &-block {
+    border-left: 5px solid $govuk-error-colour;
+    padding-left: 10px;
+  }
+
+  &-unavailable {
+    @include font-style-stack(19px, 25px, 700, normal, true);
+    color: $govuk-error-colour;
+    display: none;
   }
 }
