--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -38,7 +38,7 @@
 
 {% block header %}
   <script>
-    var gtmIdValue = "G-0FDPPSVB0H"
+    var gtmIdValue = "GTM-PZJ4WBG7"
   </script>
   <script type="module" src="{{ assetPath }}/scripts/cookieScript.js"></script>
   <header class="header-container">
