--- a/src/assets/sass/templates/_results.scss
+++ b/src/assets/sass/templates/_results.scss
@@ -460,3 +460,7 @@
 .defra-filter-options--open .defra-filter-options__container {
   display: block;
 }
+
+.govuk-checkboxes__label {
+  padding: 7px 30px;
+}
