--- a/src/views/screens/guided_search/classifier_selection.njk
+++ b/src/views/screens/guided_search/classifier_selection.njk
@@ -22,12 +22,13 @@
     ]
   }) }}
   {% endif %}
-  
+
 {% endblock %}
 
 {% block content %}
-  <div class="govuk-grid-row">
+  <div>
     {% include "partials/results_count/template.njk" %}
+     <div class="govuk-grid-row">
     <form method="GET" id="{{formId}}" action="{% if nextLevel > 3 %} {{skipPath}} {% else %} {{guidedClassifierSearchPath}} {% endif %}" data-do-browser-storage>
       <input type="hidden" name="level" value="{{nextLevel}}" />
       <div class="govuk-grid-column-full govuk-!-padding-top-6">
@@ -65,27 +66,33 @@
               items: checkboxItems
             }) }}
         {% endfor %}
-        <div class="govuk-grid-row  govuk-!-margin-top-4 govuk-!-margin-bottom-6 geography-buttons">
+
+      </div>
+    </form>
+    </div>
+     <div class="govuk-grid-row">
+      <form method="POST" id="{{formId}}" action="{% if nextLevel > 3 %} {{skipPath}} {% else %} {{guidedClassifierSearchPath}} {% endif %}" data-do-browser-storage>
+    <div class="govuk-grid-row  govuk-!-margin-top-4 govuk-!-margin-bottom-6 geography-buttons">
           {% if nextLevel > 2 %}
             <div class="govuk-grid-column-one-half geography-buttons__left">
               {{ govukButton({ text: "Previous question", classes: "govuk-button--secondary govuk-!-margin-bottom-0", href: 'javascript:history.back()' }) }}
-            </div>  
+            </div>
             <div class="govuk-grid-column-one-half govuk-button-group govuk-!-margin-bottom-0 geography-buttons__right">
           {% endif %}
-          <div class="govuk-button-group">          
+          <div class="govuk-button-group">
           {{ govukButton({ text: "Skip question", classes: "govuk-button--secondary", href: skipPath, attributes: {
             'data-do-storage-skip': ''
           } }) }}
           {{ govukButton({ text: "Next question", attributes: {
-            'data-to-disable': '',
+
             'data-next-question': ''
           } }) }}
           {% if nextLevel > 2 %}
           </div>
-          {% endif %} 
+          {% endif %}
           </div>
         </div>
-      </div>
-    </form>
+        </div>
+  </form>
   </div>
 {% endblock %}
