Map button changes

--- a/src/views/partials/results/map_results.njk
+++ b/src/views/partials/results/map_results.njk
@@ -6,7 +6,7 @@
 {% set extraClass = ' map-modal'%}
 
 {% block beforeModalContent %}
-  <div class='govuk-grid-column-full'>
+  {# <div class='govuk-grid-column-full'>
     <div id="map-results-block">
       <a href="javascript:void(0);" id='map-result-button' disabled="true" onclick="openMapModal()" role="button" draggable="false" class='govuk-button govuk-button--map govuk-!-margin-bottom-4" data-module="govuk-button'>
       View&nbsp;<span id="map-result-count"></span>&nbsp;results on a map
@@ -16,7 +16,7 @@
       </a>
       <p id="map-results-unavailable" class="govuk-!-margin-0 govuk-!-margin-bottom-2 govuk-!-padding-0 map-results-unavailable">Map functionality unavailable. Browser does not support JavaScript. Please update or enable JavaScript.</p>
     </div>
-  </div>
+  </div> #}
 {% endblock %}
 
 {% block modalContent %}
