Improved 'See results on a map' Button

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7535,12 +7535,17 @@
   border-width: 2px;
   border-color: #002D18;
   border-style: solid;
+  background-size: contain;
 }
 
 .map-container-button {
   top: 50.5px;
   left: 159.5px;
   padding: 7px 12px 6px 12px;
+}
+
+.no-script-container {
+  padding-top: 15px;
 }
 
 .count-block {
