Improved 'See results on a map' Button

--- a/src/assets/sass/components/_search.scss
+++ b/src/assets/sass/components/_search.scss
@@ -99,7 +99,7 @@
   background-size: contain;
 }
 
-.map-container-button{
+#map-results-block a{
   top: 50.5px;
   left: 159.5px;
   padding: 7px 12px 6px 12px;
