UI Fixes - for classifier label and description positioning

--- a/src/assets/sass/components/_search.scss
+++ b/src/assets/sass/components/_search.scss
@@ -96,7 +96,7 @@
   border-width: 2px;
   border-color: #002D18;
   border-style: solid;
-  background-size: contain;
+  background-size: cover;
 }
 
 #map-results-block a{
