--- a/src/views/partials/results/summary.njk
+++ b/src/views/partials/results/summary.njk
@@ -27,7 +27,7 @@
   <div class="govuk-section-break--visible"></div>
   <div class="no-script-container">
     <noscript>
-        <p id="map-results-unavailable" class="govuk-!-margin-0 govuk-!-margin-bottom-2 govuk-!-padding-0 govuk-error-message">Enable or install JavaScript in your browser to use the map.</p>
+        <p id="map-results-unavailable" class="govuk-!-margin-0 govuk-!-margin-bottom-2 govuk-!-padding-0 govuk-heading-s">Enable or install JavaScript in your browser to use the map.</p>
     </noscript>
   </div>
   <form class='option-container govuk-section-break--visible' action="{{sortSubmitPath}}" id="sort_results" method="post">
